// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectDescriptionList annotations 1`] = `
<div>
  <dl
    class="pf-v5-c-description-list pf-m-horizontal"
  >
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            deprecated.daemonset.template.generation
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            1
          </div>
        </dd>
      </div>
    </div>
  </dl>
</div>
`;

exports[`ObjectDescriptionList labels 1`] = `
<div>
  <dl
    class="pf-v5-c-description-list pf-m-horizontal"
  >
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            k8s-app
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            kube-proxy
          </div>
        </dd>
      </div>
    </div>
  </dl>
</div>
`;

exports[`ObjectDescriptionList ports 1`] = `
<div>
  <dl
    class="pf-v5-c-description-list pf-m-horizontal"
  >
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            name
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          />
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            containerPort
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            22
          </div>
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            protocol
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            TCP
          </div>
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            exposure
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            UNSET
          </div>
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            exposedPort
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            0
          </div>
        </dd>
      </div>
    </div>
  </dl>
  <dl
    class="pf-v5-c-description-list pf-m-horizontal"
  >
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            name
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          />
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            containerPort
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            8080
          </div>
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            protocol
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            TCP
          </div>
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            exposure
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            INTERNAL
          </div>
        </dd>
      </div>
    </div>
    <div>
      <div
        class="pf-v5-c-description-list__group"
      >
        <dt
          class="pf-v5-c-description-list__term"
        >
          <span
            class="pf-v5-c-description-list__text"
          >
            exposedPort
          </span>
        </dt>
        <dd
          class="pf-v5-c-description-list__description"
        >
          <div
            class="pf-v5-c-description-list__text"
          >
            0
          </div>
        </dd>
      </div>
    </div>
    <div>
      <dl
        class="pf-v5-c-description-list pf-m-horizontal pf-v5-u-pl-md"
      >
        <div>
          <dl
            class="pf-v5-c-description-list pf-m-horizontal pf-v5-u-pl-md"
          >
            <div>
              <div
                class="pf-v5-c-description-list__group"
              >
                <dt
                  class="pf-v5-c-description-list__term"
                >
                  <span
                    class="pf-v5-c-description-list__text"
                  >
                    level
                  </span>
                </dt>
                <dd
                  class="pf-v5-c-description-list__description"
                >
                  <div
                    class="pf-v5-c-description-list__text"
                  >
                    INTERNAL
                  </div>
                </dd>
              </div>
            </div>
            <div>
              <div
                class="pf-v5-c-description-list__group"
              >
                <dt
                  class="pf-v5-c-description-list__term"
                >
                  <span
                    class="pf-v5-c-description-list__text"
                  >
                    serviceName
                  </span>
                </dt>
                <dd
                  class="pf-v5-c-description-list__description"
                >
                  <div
                    class="pf-v5-c-description-list__text"
                  >
                    visa-processor-service
                  </div>
                </dd>
              </div>
            </div>
            <div>
              <div
                class="pf-v5-c-description-list__group"
              >
                <dt
                  class="pf-v5-c-description-list__term"
                >
                  <span
                    class="pf-v5-c-description-list__text"
                  >
                    serviceId
                  </span>
                </dt>
                <dd
                  class="pf-v5-c-description-list__description"
                >
                  <div
                    class="pf-v5-c-description-list__text"
                  >
                    eb1af0b8-a6da-11ea-a6c6-42010a800049
                  </div>
                </dd>
              </div>
            </div>
            <div>
              <div
                class="pf-v5-c-description-list__group"
              >
                <dt
                  class="pf-v5-c-description-list__term"
                >
                  <span
                    class="pf-v5-c-description-list__text"
                  >
                    serviceClusterIp
                  </span>
                </dt>
                <dd
                  class="pf-v5-c-description-list__description"
                >
                  <div
                    class="pf-v5-c-description-list__text"
                  >
                    10.19.243.95
                  </div>
                </dd>
              </div>
            </div>
            <div>
              <div
                class="pf-v5-c-description-list__group"
              >
                <dt
                  class="pf-v5-c-description-list__term"
                >
                  <span
                    class="pf-v5-c-description-list__text"
                  >
                    servicePort
                  </span>
                </dt>
                <dd
                  class="pf-v5-c-description-list__description"
                >
                  <div
                    class="pf-v5-c-description-list__text"
                  >
                    8080
                  </div>
                </dd>
              </div>
            </div>
            <div>
              <div
                class="pf-v5-c-description-list__group"
              >
                <dt
                  class="pf-v5-c-description-list__term"
                >
                  <span
                    class="pf-v5-c-description-list__text"
                  >
                    nodePort
                  </span>
                </dt>
                <dd
                  class="pf-v5-c-description-list__description"
                >
                  <div
                    class="pf-v5-c-description-list__text"
                  >
                    0
                  </div>
                </dd>
              </div>
            </div>
          </dl>
        </div>
      </dl>
    </div>
  </dl>
</div>
`;
